tests/invalid_inputs/sema/class_private_method_call.cpp

class C {
	int foo() {return 42;}
};

void f() {
	C c;
	c.foo();
}

